got the sky to generate based on weather information

--- a/deer.html
+++ b/deer.html
@@ -10,8 +10,21 @@
 
 </head>
 <body>
-    <div id="deerHolder">
-        <img id="patronus" src="img/deer-removebg.png">
+    <div class="darkForest">
+    <div id="patronusHolder">
+        <div id="deer"></div>
+        <div id="beagle"></div>
+        <div id="cat"></div>
+        <div id="cobra"></div>
+        <div id="aardvark"></div>
+        <div id="goat"></div>
+        <div id="horse"></div>
+        <div id="otter"></div>
+        <!-- <img id="patronus" src="img/deer-removebg.png"> -->
     </div>
+</div>
+    
+    
+
 </body>
 </html>
