--- a/index.html
+++ b/index.html
@@ -73,15 +73,31 @@
 
 <div id="showHouse"> 
   <div id="hallBackground">
-    <div id="weatherRealness">
-      <div id="hallWrapper">
-      <img class="cloudy" src="img/clouds.png">
-      <h1>You've been sorted!</h1>
-
-        <div class="weatherContainer">
-
-
+      <div class="weatherContainer">
+        <!-- <div class=ENTER TEMPLATE KEYWORD HERE></div> -->
+        <!-- <div class="clear-day"></div> -->
+        <!-- <div class="wind"></div> -->
+        <div class="snow"></div>
+        <!-- <div class="sleet"></div> -->
+        <!-- <div class="rain"></div> -->
+        <!-- <div class="partly-cloudy-day"></div> -->
+        <!-- <div class="fog"></div> -->
+        <!-- <div class="clear-night"></div> -->
+        <!-- <div class="cloudy"></div> -->
+        <!-- <div class="partly-cloudy-night"></div> -->
         </div>
+      <div id="hallWrapper">
+        <h1>You've been sorted!</h1>
+        
+
+
+
+
+
+
+
+
+
 
 
 
